[package]
name = "firebreak"
version = "0.1.0"
authors = ["Ben Challenor <ben@challenor.org>"]
edition = "2018"
license = "MIT"

[dependencies]
async-trait = "0.1"
crossbeam-utils = "0.7"
env_logger = "0.7"
futures = "0.3"
indoc = "1"
ipnet = "2"
lazy_static = "1"
libc = "0.2"
log = "0.4"
paste = "1"
rand = "0.7"
tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "io-util", "net", "time", "macros"] }
